[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/textBox/text-box.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/textBox/character-name-box.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/textbox_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/objects/textbox/Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/objects/textbox/TextBox.gd" type="Script" id=5]
[ext_resource path="res://src/objects/textbox/ChoiceSelector.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "name_box_fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("NameBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBox:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 64, -49 ), Vector2( 128, -49 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "name_box_fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("NameBox:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBox:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 128, -49 ), Vector2( 192, -49 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RichTextLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="TextBox" type="TextureRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -147.5
margin_bottom = 147.5
theme = ExtResource( 3 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="NameBox" type="TextureRect" parent="."]
margin_left = 128.0
margin_top = -49.0
margin_right = 616.0
margin_bottom = 62.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="NameBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -23.5
margin_right = 34.0
margin_bottom = 13.5
text = "Имя"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -832.0
margin_top = -84.5
margin_right = 832.0
margin_bottom = 92.5
bbcode_enabled = true
bbcode_text = "Экс-граф? Плюш изъят! Бьём чуждый цен хвощ.
Сьешь ещё этих мягких французских булок, да выпей чаю."
meta_underlined = false
text = "Экс-граф? Плюш изъят! Бьём чуждый цен хвощ.
Сьешь ещё этих мягких французских булок, да выпей чаю."
scroll_active = false

[node name="Arrow" parent="RichTextLabel" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 0.0
margin_bottom = 0.0

[node name="ChoiceSelector" parent="." instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = 8.0
margin_right = -384.0
margin_bottom = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "setup"
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )
anims/name_box_fade_in = SubResource( 4 )
anims/name_box_fade_out = SubResource( 5 )
anims/setup = SubResource( 1 )
